force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/blng__PaymentAllocationInvoiceLine__c.object-meta.xml
<CustomObject>
    <label>Payment Allocation (Invoice Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations (Invoice Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>