force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Payment Allocations (Invoice Line)</relationshipLabel>
    <relationshipName>Payment_Allocations_Invoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>