force-app/main/default/objects/blng__PaymentAllocationInvoiceLine__c/fields/blng__Payment__c.field-meta.xml
<CustomField>
    <fullName>blng__Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>blng__Payment__c</referenceTo>
    <relationshipLabel>Payment Allocations (Invoice Line)</relationshipLabel>
    <relationshipName>PaymentAllocations_del</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>